# proyecto-meteorologia

./: .gitignore  404.html  README.md  app.py  index.html  mkdocs.yml  pyproject.toml  test_nasa.json
.github/workflows/: ci.yml  docs.yml  release.yml
analysis/: index.html
docs/: analysis.md  index.md
notebooks/: analisis_solar.py
scripts/: download_nasa_power.py
search/: search_index.json
src/weather/: __init__.py  utils.py
tests/: test_utils.py
